Fix logo position on mobile

--- a/src/app/[lang]/components/Map/style.css
+++ b/src/app/[lang]/components/Map/style.css
@@ -110,6 +110,7 @@
 
 .amw-logo {
   position: fixed;
+  top: 50px;
   left: 40px;
   z-index: 1000;
   display: block;
